k8s/goaccess-headers-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: goaccess-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      Connection: "upgrade"
      Upgrade: "$http_upgrade"
    customResponseHeaders:
      Access-Control-Allow-Origin: "*"
      Access-Control-Allow-Methods: "GET, OPTIONS, PUT, POST"
      Access-Control-Allow-Headers: "Content-Type, Origin, Accept, Authorization, Content-Length, X-Requested-With"
    sslRedirect: false
    forceSTSHeader: false
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
