k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gibbersound-frontend
  namespace: gibbersound
  labels:
    app: gibbersound
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gibbersound
      tier: frontend
  template:
    metadata:
      labels:
        app: gibbersound
        tier: frontend
    spec:
      containers:
      - name: gibbersound-frontend
        image: fpinero/gibbersound-frontend:0.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      nodeSelector:
        kubernetes.io/arch: arm64
