k8s/logreader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logreader
  namespace: gibbersound
spec:
  containers:
  - name: logreader
    image: alpine
    command:
    - sh
    - -c
    - "apk add goaccess && sleep 3600"
    volumeMounts:
    - name: nginx-logs
      mountPath: /logs
  volumes:
  - name: nginx-logs
    persistentVolumeClaim:
      claimName: nginx-logs-pvc
  restartPolicy: Never
