k8s/goaccess-traefik-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: goaccess-route
  namespace: gibbersound
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`stats.gibbersound.com`)
      kind: Rule
      services:
        - name: goaccess
          port: 7890
      middlewares:
        - name: goaccess-simple-headers
          namespace: default
